--- a/Leasson 10/10b.html
+++ b/Leasson 10/10b.html
@@ -8,48 +8,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10b</title>
-    <style>
-        .container {
-            display:inline-flex;
-            align-items:center;
-            gap:15px;
-            font-family:Arial;
-            color:gray;
-            width:410px;
-            height:70px;
-            border-radius:20px;
-        }
-    </style>
+    <link rel="stylesheet" href="10b.css">
 </head>
 <body>
     <div class="container">
-        <img src="7a.jpg" alt="" style="border-radius:50%; width:50px;height:50px;object-fit:cover;margin-left:10px;">
-        <div class="s"style="display:block;">
-            <p style="line-height:3px;font-weight:bold;color:black;">oliver</p>
-            <p style="display: block;line-height: 3px;">the cat</p>
-            <p style="font-size:15px;line-height: 3px;">Popular</p>
+        <img src="7a.jpg" alt="">
+        <div class="s">
+            <p class="p1">oliver</p>
+            <p class="p2">the cat</p>
+            <p class="p3">Popular</p>
         </div>
-        <button class="btn" style="color:white;font-weight:bold;font-size:15px; margin-left:100px;background-color:rgb(68, 68, 255); width:70px;height:30px; border:none; border-radius:5px;">Follow</button>
+        <button class="btn1">Follow</button>
     </div>
     <br>
     <div class="container">
-        <img src="7a.jpg" alt="" style="border-radius:50%; width:50px;height:50px;object-fit:cover;margin-left:10px;">
-        <div class="s"style="display:block;">
-            <p style="line-height:3px;font-weight:bold;color:black;">Mimi</p>
-            <p style="display: block;line-height: 3px;">Sleepy Cat</p>
-            <p style="font-size:15px;line-height: 3px;">Popular</p>
+        <img src="7a.jpg" alt="">
+        <div class="s">
+            <p class="p1">Mimi</p>
+            <p class="p2">Sleepy Cat</p>
+            <p class="p3">Popular</p>
         </div>
-        <button class="btn" style="color:white;font-weight:bold;font-size:15px; margin-left:75px;background-color:rgb(68, 68, 255); width:70px;height:30px; border:none; border-radius:5px;">Follow</button>
+        <button class="btn2">Follow</button>
     </div>
     <br>
     <div class="container">
-        <img src="7a.jpg" alt="" style="border-radius:50%; width:50px;height:50px;object-fit:cover;margin-left:10px;">
-        <div class="s"style="display:block;">
-            <p style="line-height:3px;font-weight:bold;color:black;">Rex</p>
-            <p style="display: block;line-height: 3px;">Happy Bulldog</p>
-            <p style="font-size:15px;line-height: 3px;">Popular</p>
+        <img src="7a.jpg" alt="">
+        <div class="s">
+            <p class="p1">Rex</p>
+            <p class="p2">Happy Bulldog</p>
+            <p class="p3">Popular</p>
         </div>
-        <button class="btn" style="color:white;font-weight:bold;font-size:15px; margin-left:50px;background-color:rgb(68, 68, 255); width:70px;height:30px; border:none; border-radius:5px;">Follow</button>
+        <button class="btn3">Follow</button>
     </div>
 </body>
 </html>
