--- a/Leasson 10/10c.html
+++ b/Leasson 10/10c.html
@@ -8,35 +8,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10c</title>
-    <style>
-        div {
-            display:inline-flex;
-            font-family:arial;
-        }
-    </style>
+    <link rel="stylesheet" href="10c.css">
 </head>
 <body>
     <div>
-        <img src="7a.jpg" alt="" width="200px">
-        <div style="display:block;margin-left:10px;">
-            <p style="margin-left:2px;margin-top:3px;font-weight:bold;font-size:15px;line-height:20px;">How to compete against CS <br>degress (as a self-taught dev)</p>
-            <p style="color:gray;font-size:13px;line-height:20px;">SuperSimpleDev <br>1.5K views • 4 months ago</p>
+        <img src="7a.jpg" alt="">
+        <div class="main">
+            <p class="p1">How to compete against CS <br>degress (as a self-taught dev)</p>
+            <p class="p2">SuperSimpleDev <br>1.5K views • 4 months ago</p>
         </div>
     </div>
     <br>
-    <div style="margin-top:5px;">
-        <img src="7a.jpg" alt="" width="200px">
-        <div style="display:block;margin-left:10px;">
-            <p style="margin-left:2px;margin-top:3px;font-weight:bold;font-size:15px;line-height:20px;">Which programming languange <br>to learn first 2022 (with charts)</p>
-            <p style="color:gray;font-size:13px;line-height:20px;">SuperSimpleDev <br>5.7K views • 11 months ago</p>
+    <div class="mainn">
+        <img src="7a.jpg" alt="">
+        <div class="main">
+            <p class="p1">Which programming languange <br>to learn first 2022 (with charts)</p>
+            <p class="p2">SuperSimpleDev <br>5.7K views • 11 months ago</p>
         </div>
     </div>
     <br>
-    <div style="margin-top:5px;">
-        <img src="7a.jpg" alt="" width="200px">
-        <div style="display:block;margin-left:10px;">
-            <p style="margin-left:2px;margin-top:3px;font-weight:bold;font-size:15px;line-height:20px;">Frontend web development - a <br>complete overview (2021)</p>
-            <p style="color:gray;font-size:13px;line-height:20px;">SuperSimpleDev <br>1K views • 4 months ago</p>
+    <div class="mainn">
+        <img src="7a.jpg" alt="">
+        <div class="main">
+            <p class="p1">Frontend web development - a <br>complete overview (2021)</p>
+            <p class="p2">SuperSimpleDev <br>1K views • 4 months ago</p>
         </div>
     </div>
 </body>
