--- a/Leasson 11/11a.html
+++ b/Leasson 11/11a.html
@@ -8,18 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11a</title>
-    <style>
-        .grid-container {
-            display:grid;
-            grid-template-columns: 200px 75px;
-        }
-        .dv1 {
-            background-color:skyblue;
-        }
-        .dv2 {
-            background-color:pink;
-        }
-    </style>
+    <link rel="stylesheet" href="11a.css">
 </head>
 <body>
     <div class="grid-container">
