--- a/Leasson 11/11b.html
+++ b/Leasson 11/11b.html
@@ -8,18 +8,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11b</title>
-    <style>
-        .container {
-            display:grid;
-            grid-template-columns: 50px 300px 75px;
-        }
-    </style>
+    <link rel="stylesheet" href="11b.css">
 </head>
 <body>
     <div class="container">
-        <div style="background-color:skyblue;">col1</div>
-        <div style="background-color:pink;">col2</div>
-        <div style="background-color:skyblue;">col3</div>
+        <div class="div1">col1</div>
+        <div class="div2">col2</div>
+        <div class="div1">col3</div>
     </div>
 </body>
 </html>
