--- a/Leasson 11/11d.html
+++ b/Leasson 11/11d.html
@@ -8,54 +8,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11d</title>
-    <style>
-        body {
-            font-family:Arial;
-        }
-        p {
-            margin-left:10px;
-        }
-        .grid-container {
-            display:grid;
-            grid-template-columns:200px 200px 200px;
-            gap:30px;
-            grid-template-rows: 320px;
-        }
-    </style>
+    <link rel="stylesheet" href="11d.css">
 </head>
 <body>
     <div class="grid-container">
-        <div class="container" style="box-shadow:0px 2px 5px 5px rgb(193, 193, 193);">
-            <img src="7a.jpg" alt="" style="width:200px; height:200px;object-fit:cover;">
+        <div class="container">
+            <img class="img1" src="7a.jpg" alt="">
             <br>
             <p>
-            <span style="font-weight:bold;font-size:20px;">Oliver</span>
+            <span class="span1">Oliver</span>
             <br>
-            <img src="7a.jpg" alt="" style="object-fit:cover;width:20px;height:20px;border-radius:50%;  vertical-align: middle;margin-top:-3px;">
-            <span style="color:gray;">2 mutual friends</span>
-            <button style="margin-top:5px;background-color:rgb(103, 103, 255);border:none;color:white;font-size:15px;padding:10px;width:115px;border-radius:10px;">Add Friend</button>
+            <img class="img2" src="7a.jpg" alt="">
+            <span class="span2">2 mutual friends</span>
+            <button>Add Friend</button>
             </p>
         </div>
-        <div class="container" style="box-shadow:0px 2px 5px 5px rgb(193, 193, 193);">
-            <img src="7a.jpg" alt="" style="width:200px; height:200px;object-fit:cover;">
+        <div class="container">
+            <img class="img1" src="7a.jpg" alt="">
             <br>
             <p>
-            <span style="font-weight:bold;font-size:20px;">Mimi</span>
+            <span class="span1">Mimi</span>
             <br>
-            <img src="7a.jpg" alt="" style="object-fit:cover;width:20px;height:20px;border-radius:50%;  vertical-align: middle;margin-top:-3px;">
-            <span style="color:gray;">2 mutual friends</span>
-            <button style="margin-top:5px;background-color:rgb(103, 103, 255);border:none;color:white;font-size:15px;padding:10px;width:115px;border-radius:10px;">Add Friend</button>
+            <img class="img2" src="7a.jpg" alt="">
+            <span class="span2">2 mutual friends</span>
+            <button>Add Friend</button>
             </p>
         </div>
-        <div class="container" style="box-shadow:0px 2px 5px 5px rgb(193, 193, 193);">
-            <img src="7a.jpg" alt="" style="width:200px; height:200px;object-fit:cover;">
+        <div class="container">
+            <img class="img1" src="7a.jpg" alt="">
             <br>
             <p>
-            <span style="font-weight:bold;font-size:20px;">Rex</span>
+            <span class="span1">Rex</span>
             <br>
-            <img src="7a.jpg" alt="" style="object-fit:cover;width:20px;height:20px;border-radius:50%;  vertical-align: middle;margin-top:-3px;">
-            <span style="color:gray;">2 mutual friends</span>
-            <button style="margin-top:5px;background-color:rgb(103, 103, 255);border:none;color:white;font-size:15px;padding:10px;width:115px;border-radius:10px;">Add Friend</button>
+            <img class="img2" src="7a.jpg" alt="">
+            <span class="span2">2 mutual friends</span>
+            <button>Add Friend</button>
             </p>
         </div>
     </div>
