--- a/Leasson 12/12a.html
+++ b/Leasson 12/12a.html
@@ -8,16 +8,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>12a</title>
-    <style>
-        .flex-container {
-            display:flex;
-        }
-    </style>
+    <link rel="stylesheet" href="12a.css">
 </head>
 <body>
     <div class="flex-container">
-        <div style="background-color:skyblue;width:200px;">200px</div>
-        <div style="background-color:pink;width:75px;">75px</div>
+        <div class="div1">200px</div>
+        <div class="div2">75px</div>
     </div>
 </body>
 </html>
