--- a/Leasson 10/10e.html
+++ b/Leasson 10/10e.html
@@ -8,48 +8,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>10e</title>
-    <style>
-        body {
-            font-family:Arial;
-        }
-        p {
-            margin-left:10px;
-        }
-    </style>
+    <link rel="stylesheet" href="10e.css">
 </head>
 <body>
-    <div style="display:inline-flex;">
-        <div style="height:320px;box-shadow:0px 2px 5px 5px rgb(193, 193, 193);width:200px;">
-            <img src="7a.jpg" alt="" style="width:200px; height:200px;object-fit:cover;">
+    <div class="container">
+        <div class="main1">
+            <img class="img1" src="7a.jpg" alt="">
             <br>
             <p>
-            <span style="font-weight:bold;font-size:20px;">Oliver</span>
+            <span class="span1" style="">Oliver</span>
             <br>
-            <img src="7a.jpg" alt="" style="object-fit:cover;width:20px;height:20px;border-radius:50%;  vertical-align: middle;margin-top:-3px;">
-            <span style="color:gray;">2 mutual friends</span>
-            <button style="margin-top:5px;background-color:rgb(103, 103, 255);border:none;color:white;font-size:15px;padding:10px;width:115px;border-radius:10px;">Add Friend</button>
+            <img class="img2" src="7a.jpg" alt="">
+            <span class="span2">2 mutual friends</span>
+            <button>Add Friend</button>
             </p>
         </div>
-        <div style="height:320px;box-shadow:0px 2px 5px 5px rgb(193, 193, 193);width:200px;margin-left:30px;">
-            <img src="7a.jpg" alt="" style="width:200px; height:200px;object-fit:cover;">
+        <div class="main2">
+            <img class="img1" src="7a.jpg" alt="">
             <br>
             <p>
-            <span style="font-weight:bold;font-size:20px;">Mimi</span>
+            <span class="span1">Mimi</span>
             <br>
-            <img src="7a.jpg" alt="" style="object-fit:cover;width:20px;height:20px;border-radius:50%;  vertical-align: middle;margin-top:-3px;">
-            <span style="color:gray;">2 mutual friends</span>
-            <button style="margin-top:5px;background-color:rgb(103, 103, 255);border:none;color:white;font-size:15px;padding:10px;width:115px;border-radius:10px;">Add Friend</button>
+            <img class="img2" src="7a.jpg" alt="">
+            <span class="span2">2 mutual friends</span>
+            <button>Add Friend</button>
             </p>
         </div>
-        <div style="height:320px;box-shadow:0px 2px 5px 5px rgb(193, 193, 193);width:200px;margin-left:30px;">
-            <img src="7a.jpg" alt="" style="width:200px; height:200px;object-fit:cover;">
+        <div class="main2">
+            <img class="img1" src="7a.jpg" alt="">
             <br>
             <p>
-            <span style="font-weight:bold;font-size:20px;">Rex</span>
+            <span class="span1">Rex</span>
             <br>
-            <img src="7a.jpg" alt="" style="object-fit:cover;width:20px;height:20px;border-radius:50%;  vertical-align: middle;margin-top:-3px;">
-            <span style="color:gray;">2 mutual friends</span>
-            <button style="margin-top:5px;background-color:rgb(103, 103, 255);border:none;color:white;font-size:15px;padding:10px;width:115px;border-radius:10px;">Add Friend</button>
+            <img src="7a.jpg" alt="" class="img2">
+            <span class="span2">2 mutual friends</span>
+            <button>Add Friend</button>
             </p>
         </div>
     </div>
