--- a/Leasson 11/11c.html
+++ b/Leasson 11/11c.html
@@ -8,33 +8,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>11c</title>
-    <style>
-        .container1 {
-            display:grid;
-            grid-template-columns: 100px 100px 100px 100px;
-            gap:20px;
-        }
-        .container2 {
-            display:grid;
-            grid-template-columns: 100px 100px 100px 100px;
-            gap:20px;
-            margin-top:10px;
-        }
-    </style>
+    <link rel="stylesheet" href="11c.css">
 </head>
 <body>
     <div class="container">
-        <div class="container1">
-            <div style="background-color:pink;">col1</div>
-            <div style="background-color:pink;">col2</div>
-            <div style="background-color:pink;">col3</div>
-            <div style="background-color:pink;">col4</div>
+        <div class="container-card 1">
+            <div>col1</div>
+            <div>col2</div>
+            <div>col3</div>
+            <div>col4</div>
         </div>
-        <div class="container2">
-            <div style="background-color:pink;">col1</div>
-            <div style="background-color:pink;">col2</div>
-            <div style="background-color:pink;">col3</div>
-            <div style="background-color:pink;">col4</div>
+        <div class="container-card 2">
+            <div>col1</div>
+            <div>col2</div>
+            <div>col3</div>
+            <div>col4</div>
         </div>
     </div>
 </body>
