--- a/Leasson 12/12b.html
+++ b/Leasson 12/12b.html
@@ -8,17 +8,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>12b</title>
-    <style>
-        .flex-container {
-            display:flex;
-        }
-    </style>
+    <link rel="stylesheet" href="12b.css">
 </head>
 <body>
     <div class="flex-container">
-        <div style="background-color:skyblue;width:50px;">item1</div>
-        <div style="background-color:pink;width:300px;">item2</div>
-        <div style="background-color:skyblue;width:75px;">item3</div>
+        <div class="div1">item1</div>
+        <div class="div2">item2</div>
+        <div class="div3">item3</div>
     </div>
 </body>
 </html>
