--- a/Leasson 12/12c.html
+++ b/Leasson 12/12c.html
@@ -8,19 +8,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>12c</title>
-    <style>
-        .flex-container {
-            display:flex;
-            gap:100px;
-        }
-    </style>
+    <link rel="stylesheet" href="12c.css">
 </head>
 <body>
     <div class="flex-container">
-            <div style="background-color:pink;">item1</div>
-            <div style="background-color:pink;">item2</div>
-            <div style="background-color:pink;">item3</div>
-            <div style="background-color:pink;">item4</div>
+            <div class="div">item1</div>
+            <div class="div">item2</div>
+            <div class="div">item3</div>
+            <div class="div">item4</div>
     </div>
 </body>
 </html>
