--- a/Leasson 12/12d.html
+++ b/Leasson 12/12d.html
@@ -8,23 +8,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>12d</title>
-    <style>
-        .container {
-            display:flex;
-            align-items:center;
-            border:1px solid gray;
-            height:50px;
-            width:stretch;
-            display:inline-flex;
-            gap:300px;
-        }
-    </style>
+    <link rel="stylesheet" href="12d.css">
 </head>
 <body>
     <div class="flex-container">
         <div class="container">
-            <div style="background-color:pink;">item1</div>
-            <div style="background-color:pink;">item2</div>
+            <div>item1</div>
+            <div>item2</div>
         </div>
     </div>
 </body>
