--- a/Leasson 12/12e.html
+++ b/Leasson 12/12e.html
@@ -1,22 +1,29 @@
 <!-- Muhammad Haidar Almer Rafif -->
-<!-- 22/01/25 -->
+<!-- 08/05/25 -->
 <!-- HTML & CSS Exercises Leasson 12 - 12e -->
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12e</title>
-    <style>
-        
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>12e</title>
+  <link rel="stylesheet" href="12e.css">
 </head>
 <body>
-    <div class="flex-container">
-        <div class="container">Home</div>
-        <div class="container">Notifications</div>
-        <div class="container">Messages</div>
+  <div class="container">
+    <div class="flexbox">
+      <div>Home</div>
+      <div class="notifications">14</div>
     </div>
+    <div class="flexbox">
+      <div>Notifications</div>
+      <div class="notifications">3</div>
+    </div>
+    <div class="flexbox">
+      <div>Messages</div>
+      <div class="notifications">5</div>
+    </div>
+  </div>
 </body>
 </html>
